--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="footer-content">
             <div class="footer-contact">
                 <h4>Contact Us</h4>
-                <p>Email: jasonhustle.in@gmail.com</p>
+                <p>Email: jasonhustle@gmail.com</p>
                 <p>Phone: +91 9342046252</p>
             </div>
 
